force-app/main/default/objects/Resource_Capacity__c/Resource_Capacity__c.object-meta.xml
<CustomObject>
    <label>Resource Capacity</label>
    <nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>Resource Capacity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Capacity</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>