force-app/main/default/objects/Resource_Capacity__c/fields/Assigned_Appointment_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Appointment_Minutes__c</fullName>
    <label>Assigned Appointment Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>