force-app/main/default/objects/Resource_Capacity__c/fields/Availability_Before_Consumption__c.field-meta.xml
<CustomField>
    <fullName>Availability_Before_Consumption__c</fullName>
    <label>Availability Before Consumption</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>