force-app/main/default/objects/Resource_Capacity__c/fields/Booked_Hours__c.field-meta.xml
<CustomField>
    <fullName>Booked_Hours__c</fullName>
    <formula>(Assigned_Appointment_Minutes__c  + Total_Travel_Time__c)/60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booked Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>