force-app/main/default/objects/Resource_Capacity__c/fields/Gross_Available_Time__c.field-meta.xml
<CustomField>
    <fullName>Gross_Available_Time__c</fullName>
    <formula>(Capacity__c - Total_PTO_Duration__c - Total_Shrink_Duration__c)/60</formula>
    <label>Gross Available Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>