force-app/main/default/objects/Resource_Capacity__c/fields/Slot_08_12_Avail_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Slot_08_12_Avail_Minutes__c</fullName>
    <label>Slot 08-12 Avail Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>