force-app/main/default/objects/Resource_Capacity__c/fields/Slot_12_16_Assigned_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Slot_12_16_Assigned_Minutes__c</fullName>
    <label>Slot 12-16 Assigned Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>