force-app/main/default/objects/Resource_Capacity__c/fields/Total_Break_Duration__c.field-meta.xml
<CustomField>
    <fullName>Total_Break_Duration__c</fullName>
    <label>Total Break Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>