force-app/main/default/objects/Resource_Capacity__c/fields/Total_Break_Duration_in_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Break_Duration_in_Hours__c</fullName>
    <formula>Total_Break_Duration__c /60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Break Duration in Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>