force-app/main/default/objects/Resource_Capacity__c/fields/Total_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Total_Capacity__c</fullName>
    <formula>Availability_Before_Consumption__c - Assigned_Appointment_Minutes__c -  Total_Travel_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>