force-app/main/default/objects/Resource_Capacity__c/fields/Total_Net_Available_Time_In_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Net_Available_Time_In_Hours__c</fullName>
    <formula>Capacity__c /60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Net Available Time In Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>