force-app/main/default/objects/Resource_Capacity__c/fields/Total_Shrink_Duration__c.field-meta.xml
<CustomField>
    <fullName>Total_Shrink_Duration__c</fullName>
    <label>Total Shrink Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>