force-app/main/default/objects/Resource_Capacity__c/fields/Total_Shrink_Duration_In_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Shrink_Duration_In_Hours__c</fullName>
    <formula>Total_Shrink_Duration__c /60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Shrink Duration In Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>