force-app/main/default/objects/Resource_Capacity__c/fields/Total_Travel_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Travel_Time__c</fullName>
    <label>Total Travel Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>