force-app/main/default/objects/Resource_Capacity__c/fields/Total_Travel_Time_in_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Travel_Time_in_Hours__c</fullName>
    <formula>Total_Travel_Time__c /60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Travel Time in Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>