force-app/main/default/objects/Resource_Capacity__c/listViews/All_Resource_Capacities.listView-meta.xml
<ListView>
    <fullName>All_Resource_Capacities</fullName>
    <columns>NAME</columns>
    <columns>Capacity_Date__c</columns>
    <columns>Service_Territory__c</columns>
    <columns>Service_Resource__c</columns>
    <columns>Capacity__c</columns>
    <columns>Assigned_Appointment_Minutes__c</columns>
    <columns>Total_Absence_Duration__c</columns>
    <columns>Total_Break_Duration__c</columns>
    <columns>Total_Travel_Time__c</columns>
    <columns>Total_Capacity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Resource Capacities</label>
</ListView>